# carpentryutilities

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  test.py
Scripts/: getLens.py  testUtils.py
src/caprentryutilities/: __init__.py
src/carpentryutilities/: __about__.py  __init__.py  parse.py  units.py
tests/: testUtils.py
