[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carpentryutilities"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "th3-tech", email = "83879091+th3-tech@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/th3-tech/carpentryutilities#readme"
Issues = "https://github.com/th3-tech/carpentryutilities/issues"
Source = "https://github.com/th3-tech/carpentryutilities"

[tool.hatch.version]
path = "src/carpentryutilities/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/carpentryutilities tests}"

[tool.coverage.run]
source_pkgs = ["carpentryutilities", "tests"]
branch = true
parallel = true
omit = [
  "src/carpentryutilities/__about__.py",
]

[tool.coverage.paths]
carpentryutilities = ["src/carpentryutilities", "*/carpentryutilities/src/carpentryutilities"]
tests = ["tests", "*/carpentryutilities/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
